# fwbox

./: .gitignore  LICENSE  README.md  README.rst  config.sh  fwbox.py  fwbox.sh  pyproject.toml  west.yml
src/: run.py
src/fwbox/: __init__.py  platform.py  repl.py
src/fwbox/runners/: __init__.py  gpiod.py  runner.py  sigrok.py
zephyr/: module.yml
zephyr/app/: CMakeLists.txt  Kconfig  app.overlay  prj.conf
zephyr/app/src/: main.c
