[project]

name = "fwbox"
version = "0.0.1"
authors = [
    { name="Josuah Demangeon", email="me@josuah.net" },
]
description = "Debugging REPL for local/remote hardware"
readme = "README.rst"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]

Homepage = "https://github.com/panoramix-labs/fwbox"
Issues = "https://github.com/panoramix-labs/fwbox/issues"


[project.scripts]

fwbox = "fwbox.repl:repl"
